--- a/challenge05/style.css
+++ b/challenge05/style.css
@@ -95,17 +95,33 @@ h1 {
 main {
   display: flex;
   justify-content: center;
+  padding-top: 3em;
 }
 
 .main__content h2 {
   color: #136c72;
   width: 70%;
+  font-weight: 900;
+  font-size: 36px;
 }
 
 .main__content {
-  width: 60%;
+  width: 55%;
+}
+
+.main__content p {
+  padding-right: 15em;
 }
 
 .main__sidebar {
   width: 30%;
+  background-color: #136c72;
+  color: white;
+  text-align: center;
+  padding: 0 2em;
+  padding-bottom: 2em;
+}
+
+.main__sidebar div {
+  padding-top: 2em;
 }
