--- a/challenge07/style.css
+++ b/challenge07/style.css
@@ -1,3 +1,8 @@
+body {
+  max-width: 1128px;
+  margin: 0 auto;
+}
+
 .roboto-light {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
@@ -8,4 +13,8 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-style: normal;
+}
+
+.hero {
+  background-color: #f3eed9;
 }
