--- a/challenge07/style.css
+++ b/challenge07/style.css
@@ -15,6 +15,57 @@ body {
   font-style: normal;
 }
 
+.playfair-display {
+  font-family: 'Playfair Display', system-ui;
+  font-optical-sizing: auto;
+  font-weight: 900;
+  font-style: normal;
+}
+
 .hero {
   background-color: #f3eed9;
+  min-height: 660px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.hero_text {
+  padding: 0 10em;
+}
+
+.hero_text p {
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  word-spacing: 5px;
+}
+
+.hero_text h1 {
+  font-size: 60px;
+  color: #824936;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+main h2 {
+  font-size: 36px;
+  color: #824936;
+}
+
+main .row {
+  display: flex;
+  justify-content: space-around;
+}
+
+main p {
+  width: 40%;
+  text-align: start;
+  font-size: 21px;
 }
