--- a/challenge09/style.css
+++ b/challenge09/style.css
@@ -13,6 +13,15 @@ html {
   box-sizing: border-box;
 }
 
+a {
+  color: white;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
 .montserrat-regular {
   font-family: 'Montserrat', sans-serif;
   font-optical-sizing: auto;
@@ -84,4 +93,8 @@ header .row {
   justify-content: space-between;
   padding: 1em 1em;
   align-content: center;
+}
+
+nav {
+  width: 100%;
 }
