--- a/challenge09/style.css
+++ b/challenge09/style.css
@@ -20,6 +20,11 @@ a {
 
 ul {
   list-style: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 0.5em;
 }
 
 .montserrat-regular {
@@ -96,5 +101,8 @@ header .row {
 }
 
 nav {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
