--- a/challenge09/style.css
+++ b/challenge09/style.css
@@ -21,6 +21,7 @@ a {
 ul {
   list-style: none;
   padding: 0;
+  text-align: center;
 }
 
 li {
@@ -105,4 +106,11 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.nav__link--button {
+  background-color: white;
+  color: var(--header-bg);
+  border-radius: 10px;
+  padding: 0.2em 1em;
 }
